overflow fix

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -104,4 +104,5 @@
 
 .wine-list .list-group-item {
   height: 300px;
+  overflow: hidden;
 }
